update vue frontend

--- a/frontend-vue/src/styles/base.css
+++ b/frontend-vue/src/styles/base.css
@@ -64,6 +64,8 @@
   --text-color: var(--p-surface-700);
   --overlay-background: #ffffff;
   --color-selected: var(--p-primary-color);
+  --topbar-sticky-background: hsla(0, 0%, 100%, .7);
+
 }
 
 :root[class='p-dark'] {
@@ -71,9 +73,11 @@
   --body-text-color: var(--p-surface-50);
   --card-border: 1px solid transparent;
   --card-bg: var(--p-surface-900);
-  --border-color: rgba(255, 255, 255, 0.1);
+  /*--border-color: rgba(255, 255, 255, 0.1);*/
+  --border-color: var(--p-surface-600);
   --text-color: var(--p-surface-0);
   --overlay-background: var(--p-surface-900);
+  --topbar-sticky-background: rgba(0, 0, 0, .3);
 }
 
 *,
@@ -124,7 +128,7 @@ body {
 
 }
 
-button git{
+button {
   @apply focus-visible:outline-none;
 }
 .card {
